# ferris-chat

./: CONTRIBUTING.md  Cargo.toml  cliff.toml  deny.toml  test.rest
sql/: init.sql
src/: config.rs  lib.rs  main.rs
