[package]
authors = ["Paxon Qiao <qiaopengjun0@gmail.com>"]
description = """

"""
documentation = "https://docs.rs/"
edition = "2024"
license = "MIT"
name = "ferris-chat"
readme = "README.md"
repository = "https://github.com//ferris-chat"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "runtime-tokio-rustls",
] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
